--- a/index.ipynb
+++ b/index.ipynb
@@ -1325,9 +1325,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>df</th>\n",
+       "      <th>sum_sq</th>\n",
+       "      <th>mean_sq</th>\n",
+       "      <th>F</th>\n",
+       "      <th>PR(&gt;F)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>C(_STATE)</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.687322e+03</td>\n",
+       "      <td>1343.660882</td>\n",
+       "      <td>18.558645</td>\n",
+       "      <td>8.800607e-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Residual</th>\n",
+       "      <td>33744.0</td>\n",
+       "      <td>2.443093e+06</td>\n",
+       "      <td>72.400809</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                df        sum_sq      mean_sq          F        PR(>F)\n",
+       "C(_STATE)      2.0  2.687322e+03  1343.660882  18.558645  8.800607e-09\n",
+       "Residual   33744.0  2.443093e+06    72.400809        NaN           NaN"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Run this cell without changes\n",
     "import statsmodels.api as sm\n",
