--- a/index.ipynb
+++ b/index.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
        "[34545 rows x 358 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
    "source": [
     "# Run this cell without changes\n",
     "df = pd.read_csv(\"data/case_study.csv\", index_col=0, low_memory=False)\n",
-    "df"
+    "df\n"
    ]
   },
   {
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
        "Name: PHYSHLTH, dtype: float64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,7 @@
        "'\\nThere is an issue with the data. There data points above 30 which would not make sense for representing \"the number of days with bad physical health out of the past 30 days\"\\n'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +709,7 @@
        "Name: PHYSHLTH, dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +774,7 @@
        "Name: _STATE, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1153,7 @@
        "[33747 rows x 358 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1173,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1188,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1236,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1245,7 +1245,7 @@
        "'\\nAt first glance there does not apear to a difference between states\\n'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1268,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1281,7 +1281,7 @@
        "Name: PHYSHLTH, dtype: float64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1307,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1316,7 +1316,7 @@
        "'\\nANOVA would be the best as we have 3 categories. If it was 2 categories we would want to use a T-test\\n'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1337,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1346,7 +1346,7 @@
        "'\\nNull hypotheses: the means of PHYSHLTH are the same across states\\n\\nAlternative hypothesis: the means of PHYSHLTH are not the same across states\\n'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1369,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1427,7 +1427,7 @@
        "Residual   33744.0  2.443093e+06    72.400809        NaN           NaN"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1451,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1460,7 +1460,7 @@
        "'\\nThe p value is substantually smaller than 0.5 therfore we can reject the Null Hypotheses. \\nTherfore the differences in the mean of the three states are statistically significant. \\n\\nState Means:\\nConnecticut    3.688562\\nNew Jersey     4.380957\\nNew York       4.148030\\n\\nIt would be worth investigating why people in Connecticut \\n\\n'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1501,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1515,7 +1515,7 @@
        "Name: RENTHOM1, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1544,7 +1544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1558,14 +1558,14 @@
        "Name: RENTHOM1, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Run this cell without changes\n",
-    "df[\"RENTHOM1\"].value_counts()"
+    "df[\"RENTHOM1\"].value_counts()\n"
    ]
   },
   {
